[package]
name    = "server-native"
version.workspace = true
edition.workspace = true

[dependencies]
core-engine.workspace       = true
tokio.workspace             = true
tokio-tungstenite.workspace = true
futures-util.workspace      = true
tracing.workspace           = true
tracing-subscriber.workspace = true
