[package]
name = "wasm-edge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
core-engine = { path = "../core-engine" }

[dependencies.web-sys]
version = "0.3.69"
features = [
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "console",
]
