[package]
name    = "wasm-edge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core-engine.workspace  = true
wasm-bindgen.workspace = true
js-sys.workspace       = true

[dependencies.web-sys]
workspace = true
features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "console",
]
